--- a/manufacturing/ProjectOutputs/Design Rule Check - PCB.html
+++ b/manufacturing/ProjectOutputs/Design Rule Check - PCB.html
@@ -230,12 +230,12 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">28/11/2013</td>
+<td class="front_matter_column3">29/11/2013</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">3:00:11 PM</td>
+<td class="front_matter_column3">6:06:12 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time</td>
@@ -262,7 +262,7 @@
 </table>
 </td>
 </table>
-<hr><a name="IDASA2LC"><h2>Summary</h2></a><table>
+<hr><a name="IDASAEVD"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -277,59 +277,59 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAEB2LC">Clearance Constraint (Gap=0.5mm) (IsRegion),(All)</a></td>
+<td class="column1"><a href="#IDAEBEVD">Clearance Constraint (Gap=1mm) (InNet('EARTH')),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAKB2LC">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDAKBEVD">Net Antennae (Tolerance=1mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAQB2LC">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDAQBEVD">Silk to Silk (Clearance=-100mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAWB2LC">Clearance Constraint (Gap=0.125mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAWBEVD">Silk To Solder Mask (Clearance=-100mm) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDA2B2LC">Power Plane Connect Rule(Relief Connect )(Expansion=0.5mm) (Conductor Width=0.25mm) (Air Gap=0.25mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDA2BEVD">Minimum Solder Mask Sliver (Gap=-100mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDACC2LC">Width Constraint (Min=0.125mm) (Max=5mm) (Preferred=0.25mm) (All)</a></td>
+<td class="column1"><a href="#IDACCEVD">Hole To Hole Clearance (Gap=0mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAIC2LC">Height Constraint (Min=0mm) (Max=100mm) (Prefered=2.5mm) (All)</a></td>
+<td class="column1"><a href="#IDAICEVD">Hole Size Constraint (Min=0.025mm) (Max=25mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAOC2LC">Hole Size Constraint (Min=0.025mm) (Max=25mm) (All)</a></td>
+<td class="column1"><a href="#IDAOCEVD">Height Constraint (Min=0mm) (Max=100mm) (Prefered=2.5mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAUC2LC">Hole To Hole Clearance (Gap=0mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAUCEVD">Width Constraint (Min=0.125mm) (Max=5mm) (Preferred=0.25mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDA0C2LC">Minimum Solder Mask Sliver (Gap=-100mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDA0CEVD">Power Plane Connect Rule(Relief Connect )(Expansion=0.5mm) (Conductor Width=0.25mm) (Air Gap=0.25mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAAD2LC">Silk To Solder Mask (Clearance=-100mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDAADEVD">Clearance Constraint (Gap=0.125mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAGD2LC">Silk to Silk (Clearance=-100mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAGDEVD">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAMD2LC">Net Antennae (Tolerance=1mm) (All)</a></td>
+<td class="column1"><a href="#IDAMDEVD">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDASD2LC">Clearance Constraint (Gap=1mm) (InNet('EARTH')),(All)</a></td>
+<td class="column1"><a href="#IDASDEVD">Clearance Constraint (Gap=0.5mm) (IsRegion),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
