--- a/manufacturing/ProjectOutputs/Design Rule Check - PCB.html
+++ b/manufacturing/ProjectOutputs/Design Rule Check - PCB.html
@@ -230,12 +230,12 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">24/12/2013</td>
+<td class="front_matter_column3">25/12/2013</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">8:01:40 PM</td>
+<td class="front_matter_column3">8:50:47 AM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time</td>
@@ -262,7 +262,7 @@
 </table>
 </td>
 </table>
-<hr><a name="IDAWAQUD"><h2>Summary</h2></a><table>
+<hr><a name="IDAWA4DD"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -277,59 +277,59 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAIBQUD">Clearance Constraint (Gap=0.5mm) (IsRegion),(All)</a></td>
+<td class="column1"><a href="#IDAIB4DD">Clearance Constraint (Gap=1mm) (InNet('EARTH')),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAOBQUD">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDAOB4DD">Net Antennae (Tolerance=1mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAUBQUD">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDAUB4DD">Silk to Silk (Clearance=-100mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDA0BQUD">Clearance Constraint (Gap=0.125mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDA0B4DD">Silk To Solder Mask (Clearance=-100mm) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAACQUD">Power Plane Connect Rule(Relief Connect )(Expansion=0.5mm) (Conductor Width=0.25mm) (Air Gap=0.25mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDAAC4DD">Minimum Solder Mask Sliver (Gap=-100mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAGCQUD">Width Constraint (Min=0.125mm) (Max=5mm) (Preferred=0.25mm) (All)</a></td>
+<td class="column1"><a href="#IDAGC4DD">Hole To Hole Clearance (Gap=0mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAMCQUD">Height Constraint (Min=0mm) (Max=100mm) (Prefered=2.5mm) (All)</a></td>
+<td class="column1"><a href="#IDAMC4DD">Hole Size Constraint (Min=0.025mm) (Max=25mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDASCQUD">Hole Size Constraint (Min=0.025mm) (Max=25mm) (All)</a></td>
+<td class="column1"><a href="#IDASC4DD">Height Constraint (Min=0mm) (Max=100mm) (Prefered=2.5mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAYCQUD">Hole To Hole Clearance (Gap=0mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAYC4DD">Width Constraint (Min=0.125mm) (Max=5mm) (Preferred=0.25mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDA4CQUD">Minimum Solder Mask Sliver (Gap=-100mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDA4C4DD">Power Plane Connect Rule(Relief Connect )(Expansion=0.5mm) (Conductor Width=0.25mm) (Air Gap=0.25mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAEDQUD">Silk To Solder Mask (Clearance=-100mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDAED4DD">Clearance Constraint (Gap=0.125mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAKDQUD">Silk to Silk (Clearance=-100mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAKD4DD">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAQDQUD">Net Antennae (Tolerance=1mm) (All)</a></td>
+<td class="column1"><a href="#IDAQD4DD">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAWDQUD">Clearance Constraint (Gap=1mm) (InNet('EARTH')),(All)</a></td>
+<td class="column1"><a href="#IDAWD4DD">Clearance Constraint (Gap=0.5mm) (IsRegion),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
