Cosmetic: Swapped positions of SD1 and SD2
SD1 and SD2 card connectors were mistakenly placed in an opposite order:
SD2 SD1. This patch fixes the situation putting SD1 on the left side and
SD2 on the right side

--- a/manufacturing/ProjectOutputs/Design Rule Check - PCB.html
+++ b/manufacturing/ProjectOutputs/Design Rule Check - PCB.html
@@ -230,17 +230,17 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">31/12/2013</td>
+<td class="front_matter_column3">12/01/2014</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">1:07:11 PM</td>
+<td class="front_matter_column3">10:04:04 AM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">00:00:06</td>
+<td class="front_matter_column3">00:00:07</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename</td>
@@ -262,7 +262,7 @@
 </table>
 </td>
 </table>
-<hr><a name="IDAWA4ED"><h2>Summary</h2></a><table>
+<hr><a name="IDAWAOVD"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -277,59 +277,59 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAIB4ED">Clearance Constraint (Gap=1mm) (InNet('EARTH')),(All)</a></td>
+<td class="column1"><a href="#IDAIBOVD">Clearance Constraint (Gap=0.5mm) (IsRegion),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAOB4ED">Net Antennae (Tolerance=1mm) (All)</a></td>
+<td class="column1"><a href="#IDAOBOVD">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAUB4ED">Silk to Silk (Clearance=-100mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAUBOVD">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDA0B4ED">Silk To Solder Mask (Clearance=-100mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDA0BOVD">Clearance Constraint (Gap=0.125mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAAC4ED">Minimum Solder Mask Sliver (Gap=-100mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAACOVD">Power Plane Connect Rule(Relief Connect )(Expansion=0.5mm) (Conductor Width=0.25mm) (Air Gap=0.25mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAGC4ED">Hole To Hole Clearance (Gap=0mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAGCOVD">Width Constraint (Min=0.125mm) (Max=5mm) (Preferred=0.25mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAMC4ED">Hole Size Constraint (Min=0.025mm) (Max=25mm) (All)</a></td>
+<td class="column1"><a href="#IDAMCOVD">Height Constraint (Min=0mm) (Max=100mm) (Prefered=2.5mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDASC4ED">Height Constraint (Min=0mm) (Max=100mm) (Prefered=2.5mm) (All)</a></td>
+<td class="column1"><a href="#IDASCOVD">Hole Size Constraint (Min=0.025mm) (Max=25mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAYC4ED">Width Constraint (Min=0.125mm) (Max=5mm) (Preferred=0.25mm) (All)</a></td>
+<td class="column1"><a href="#IDAYCOVD">Hole To Hole Clearance (Gap=0mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDA4C4ED">Power Plane Connect Rule(Relief Connect )(Expansion=0.5mm) (Conductor Width=0.25mm) (Air Gap=0.25mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDA4COVD">Minimum Solder Mask Sliver (Gap=-100mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAED4ED">Clearance Constraint (Gap=0.125mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAEDOVD">Silk To Solder Mask (Clearance=-100mm) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAKD4ED">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDAKDOVD">Silk to Silk (Clearance=-100mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAQD4ED">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDAQDOVD">Net Antennae (Tolerance=1mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAWD4ED">Clearance Constraint (Gap=0.5mm) (IsRegion),(All)</a></td>
+<td class="column1"><a href="#IDAWDOVD">Clearance Constraint (Gap=1mm) (InNet('EARTH')),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
