very small correction in the PLCC28 footprint
Pin 1 was not marked in any way in the previous version.
Also, two redundant via have been removed

--- a/manufacturing/ProjectOutputs/Design Rule Check - PCB.html
+++ b/manufacturing/ProjectOutputs/Design Rule Check - PCB.html
@@ -222,7 +222,7 @@
 	</script><title>Design Rule Verification Report</title>
 </head>
 <body onload=""><img ALT="Altium" src="
-			file://C:\Users\Public\Documents\Altium\AD13\Templates\AD-rgb_logo_223x64.gif
+			file://C:\Users\Public\Documents\Altium\AD14\Templates\AD-rgb_logo_223x64.gif
 		"><a href="dxpprocess://Client:SetupPreferences?Server=PCB|PageName=Reports" class="customize"><acronym title="dxpprocess://Client:SetupPreferences?Server=PCB|PageName=Reports">customize</acronym></a><h1>Design Rule Verification Report</h1>
 <table class="header_holder">
 <td Style="width:70%">
@@ -230,17 +230,17 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">25/02/2014</td>
+<td class="front_matter_column3">27/03/2014</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">4:05:09 PM</td>
+<td class="front_matter_column3">4:10:15 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">00:00:07</td>
+<td class="front_matter_column3">00:00:09</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename</td>
@@ -262,7 +262,7 @@
 </table>
 </td>
 </table>
-<hr><a name="IDASAKHD"><h2>Summary</h2></a><table>
+<hr><a name="IDALLO2B"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -277,59 +277,59 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAEBKHD">Clearance Constraint (Gap=1mm) (InNet('EARTH')),(All)</a></td>
+<td class="column1"><a href="#IDA3LO2B">Clearance Constraint (Gap=0.5mm) (IsRegion),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAKBKHD">Net Antennae (Tolerance=1mm) (All)</a></td>
+<td class="column1"><a href="#IDADMO2B">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAQBKHD">Silk to Silk (Clearance=-100mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAJMO2B">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAWBKHD">Silk To Solder Mask (Clearance=-100mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDAPMO2B">Clearance Constraint (Gap=0.125mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDA2BKHD">Minimum Solder Mask Sliver (Gap=-100mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAVMO2B">Power Plane Connect Rule(Relief Connect )(Expansion=0.5mm) (Conductor Width=0.25mm) (Air Gap=0.25mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDACCKHD">Hole To Hole Clearance (Gap=0mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDA1MO2B">Width Constraint (Min=0.125mm) (Max=5mm) (Preferred=0.25mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAICKHD">Hole Size Constraint (Min=0.025mm) (Max=25mm) (All)</a></td>
+<td class="column1"><a href="#IDABNO2B">Height Constraint (Min=0mm) (Max=100mm) (Prefered=2.5mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAOCKHD">Height Constraint (Min=0mm) (Max=100mm) (Prefered=2.5mm) (All)</a></td>
+<td class="column1"><a href="#IDAHNO2B">Hole Size Constraint (Min=0.025mm) (Max=25mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAUCKHD">Width Constraint (Min=0.125mm) (Max=5mm) (Preferred=0.25mm) (All)</a></td>
+<td class="column1"><a href="#IDANNO2B">Hole To Hole Clearance (Gap=0mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDA0CKHD">Power Plane Connect Rule(Relief Connect )(Expansion=0.5mm) (Conductor Width=0.25mm) (Air Gap=0.25mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDATNO2B">Minimum Solder Mask Sliver (Gap=-100mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAADKHD">Clearance Constraint (Gap=0.125mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAZNO2B">Silk To Solder Mask (Clearance=-100mm) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAGDKHD">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDA5NO2B">Silk to Silk (Clearance=-100mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAMDKHD">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDAFOO2B">Net Antennae (Tolerance=1mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDASDKHD">Clearance Constraint (Gap=0.5mm) (IsRegion),(All)</a></td>
+<td class="column1"><a href="#IDALOO2B">Clearance Constraint (Gap=1mm) (InNet('EARTH')),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
